--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": "^7.0|^8.0"
+        "php": "^7.0|^8.0|^8.1|^8.2|^8.3"
     },
     "require-dev": {
         "doctrine/dbal": "^2.0",
